added check for corrupted files